Deduplicate code